// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle > match disabled snapshot 1`] = `
<div>
  <div>
    <div
      class="flex gap-2 items-top"
    >
      <input
        aria-labelledby=":r1:"
        class="toggle focus:bg-none cursor-pointer border-none bg-white hover:bg-white"
        data-testid="toggle"
        disabled=""
        type="checkbox"
      />
      <span
        class="label-text text-slate-700 text-sm font-medium flex flex-col gap-2"
        id=":r1:"
      >
        Toggle Label
      </span>
    </div>
  </div>
</div>
`;

exports[`Toggle > match snapshot 1`] = `
<div>
  <div>
    <div
      class="flex gap-2 items-top"
    >
      <input
        aria-labelledby=":r0:"
        class="toggle focus:bg-none cursor-pointer border-none bg-white hover:bg-white"
        data-testid="toggle"
        type="checkbox"
      />
      <span
        class="label-text text-slate-700 text-sm font-medium flex flex-col gap-2"
        id=":r0:"
      >
        Toggle Label
      </span>
    </div>
  </div>
</div>
`;
